syntax = "proto3";
package chat.libs;

import "google/protobuf/timestamp.proto";

option go_package = "./libs";

enum TypeId {
	REGISTER_MESSAGE_ID = 0;
	SEND_MESSAGE_ID = 1;
	QUIT_MESSAGE_ID = 2;
}

message Header {
	TypeId type_id = 1;
	string name = 2;
	google.protobuf.Timestamp sent_ts = 3;
}

message RegisterMessage {
	Header header = 1;
}

message SendMessage {
	Header header = 1;
	string user_message = 4;
}

message QuitMessage {
	Header header = 1;
}

